--- a/tests/mol-rendering-audio/EPUB/clip_times_tests.xhtml
+++ b/tests/mol-rendering-audio/EPUB/clip_times_tests.xhtml
@@ -2,7 +2,7 @@
     <head>
         <meta charset="utf-8"/>
         <title>EPUB Media Overlays Tests: Rendering Audio</title>
-        <link rel="stylesheet" type="text/css" href="../css/base.css"/>
+        <link rel="stylesheet" type="text/css" href="css/base.css"/>
     </head>
     <body>
         <h1>EPUB Media Overlays Tests: Rendering Audio</h1>
