--- a/tests/mol-audio_exceeding_clipend/OPS/mobydick.xhtml
+++ b/tests/mol-audio_exceeding_clipend/OPS/mobydick.xhtml
@@ -1,19 +1,18 @@
-<?xml version="1.0" encoding="utf-8"?>
 <html xmlns="http://www.w3.org/1999/xhtml">
-	<head>
-        <meta charset="utf-8" />
-		<title>Ignoring clipEnd attribute if it exceeds track length</title>
-        <style>
-            .active-item {
-                background-color: rgb(13,146,95);
-                color: rgb(241, 241, 220);
-            }
-            .rendered-with-mo {
-                color: rgb(158,158,158);
-            }
-        </style>
-    </head>
-	<body> 
+<head>
+    <meta charset="utf-8" />
+    <title>Ignoring clipEnd attribute if it exceeds track length</title>
+    <style>
+        .active-item {
+            background-color: rgb(13, 146, 95);
+            color: rgb(241, 241, 220);
+        }
+        .rendered-with-mo {
+            color: rgb(158, 158, 158);
+        }
+    </style>
+</head>
+<body>
     <section id="mobyexcerpt">
         <p>
             <span id="first">Call me Ishmael. 
@@ -22,11 +21,9 @@
             <span id="third">Whenever I find myself growing grim about the mouth; whenever it is a damp, drizzly November in my soul; whenever I find myself involuntarily pausing before coffin warehouses, and bringing up the rear of every funeral I meet; and especially whenever my hypos get such an upper hand of me, that it requires a strong moral principle to prevent me from deliberately stepping into the street, and methodically knocking people’s hats off—then, I account it high time to get to sea as soon as I can. This is my substitute for pistol and ball.</span>
         </p>
         <p id="fourth">
-            With a philosophical flourish Cato throws himself upon his sword; I quietly take to the ship.
-            There is nothing surprising in this. If they but knew it, almost all men in their degree, some time or other, cherish 
-            very nearly the same feelings towards the ocean with me.
+            With a philosophical flourish Cato throws himself upon his sword; I quietly take to the ship. There is nothing surprising in this. If they but knew it, almost all men in their degree, some time or other, cherish very nearly the same feelings towards the
+            ocean with me.
         </p>
-
     </section>
 </body>
 </html>
