--- a/tests/mol-audio_no_clipend/OPS/mobydick.xhtml
+++ b/tests/mol-audio_no_clipend/OPS/mobydick.xhtml
@@ -1,19 +1,19 @@
-<?xml version="1.0" encoding="utf-8"?>
 <html xmlns="http://www.w3.org/1999/xhtml">
-	<head>
-        <meta charset="utf-8" />
-		<title>Automatic rendering of an audio track until the end</title>
-        <style>
-           .active-item {
-                background-color: rgb(13,146,95);
-                color: rgb(241, 241, 220);
-            }
-            .rendered-with-mo {
-                color: rgb(158,158,158);
-            }
-        </style>
-    </head>
-	<body> 
+<head>
+    <meta charset="utf-8" />
+    <title>Rendering of an audio track until the end if clipEnd is missing</title>
+    <style>
+        .active-item {
+            background-color: rgb(13, 146, 95);
+            color: rgb(241, 241, 220);
+        }
+        
+        .rendered-with-mo {
+            color: rgb(158, 158, 158);
+        }
+    </style>
+</head>
+<body>
     <section id="mobyexcerpt">
         <p>
             <span id="first">Call me Ishmael. 
