--- a/tests/mol-audio_no_clipend/OPS/nav.xhtml
+++ b/tests/mol-audio_no_clipend/OPS/nav.xhtml
@@ -1,6 +1,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="en">
   <head>
-    <title>Automatic rendering of an audio track until the end</title>
+    <title>Rendering of an audio track until the end if clipEnd is missing</title>
   </head>
   <body>
     <nav epub:type="toc">
