--- a/tests/mol-embed/EPUB/nav.xhtml
+++ b/tests/mol-embed/EPUB/nav.xhtml
@@ -1,6 +1,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" xml:lang="en">
   <head>
-    <title>Media Overlay with embedded video</title>
+    <title>Media overlay with embedded video</title>
   </head>
   <body>
     <nav epub:type="toc">
