--- a/tests/mol-embed_fxl/EPUB/video_1.xhtml
+++ b/tests/mol-embed_fxl/EPUB/video_1.xhtml
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
         <meta charset="utf-8" />
-		<title>Media overlay with embedded video in FXL</title>
+		<title>Media overlay with embedded video in fixed layout</title>
         <link rel="stylesheet" href="fixed.css" />
         <meta name="viewport" content="width=900, height=600" />
     </head>
