--- a/tests/mol-embed_fxl/EPUB/nav.xhtml
+++ b/tests/mol-embed_fxl/EPUB/nav.xhtml
@@ -6,7 +6,7 @@
     <nav epub:type="toc">
       <ol>
         <li><a href="content_001.xhtml">Starting page</a></li>  
-        <li><a href="video_1.xhtml">Content with Media Overlay with the first video</a></li>  
+        <li><a href="video_1.xhtml">Content with media overlay with the first video</a></li>  
         <li><a href="video_2.xhtml">Content with Media Overlay with the second video</a></li>  
       </ol>
   </nav>
